Add project onboarding, idle expiry, and compact admin controls